(feat)-add phone formatter
